update-manager (1:0.152.4) UNRELEASED; urgency=low

  * merged lp:~evfool/update-manager/fix622489, many thanks
    to "FooBar" and Robert Roth (evfool)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 18 Jul 2011 10:01:13 +0200

update-manager (1:0.152.3) oneiric; urgency=low

  * remove unneeded GConf imports (we are using gsettings now)
    LP: #807715
  * a good bunch of pyflakes fixes

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 15 Jul 2011 18:00:37 +0200

update-manager (1:0.152.2) oneiric; urgency=low

  * data/update-manager.convert:
    - ship gconf->gsettings convert script

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 14 Jul 2011 10:01:18 +0200

update-manager (1:0.152.1) oneiric; urgency=low

  * fix release upgrade view dialog in gtk3
  * UpdateManager/UpdateManager.py, check-new-release-gtk:
    - use GLib.timeout_add(priority, timeout, func, data) instead
      of the old glib.timeout_add()
      thanks to Michael Terry (lp:~mterry/update-manager/pygi-cleanups)
  * check-new-release-gtk, tests/test_end_of_life.py:
    - fix test failures

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 11 Jul 2011 11:19:29 +0200

update-manager (1:0.152) oneiric; urgency=low

  * ported to gtk3/GI
  * port from gconf to gsettings
  * debian/control:
    - depend on python-gobject with overwrite bugfixes needed
      for update-manager

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 08 Jul 2011 12:25:03 +0200

update-manager (1:0.151.10) oneiric; urgency=low

  [ Brian Murray ]
  * In apport hook, collect non-default gconf values.

 -- Barry Warsaw <barry@ubuntu.com>  Thu, 07 Jul 2011 14:31:00 -0400

update-manager (1:0.151.9) oneiric; urgency=low

  * do not crash if lspci is not installed
  * merged lp:~brian-murray/update-manager/apport-hook-changes,
    thanks!
  * merged lp:~eapache/update-manager/unity-urgency-hint, many
    thanks to Evan Huus (LP: #799173)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 07 Jul 2011 11:16:14 +0200
