@@ -2,6 +2,9 @@ update-manager (1:0.152.4) UNRELEASED; urgency=low
 
   * merged lp:~evfool/update-manager/fix622489, many thanks
     to "FooBar" and Robert Roth (evfool)
+  * when downloading the html release notes, ensure to send a
+    query string similar to ubiquity to allow more specific
+    release notes
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 18 Jul 2011 10:01:13 +0200
 
